# jiang-research

./: FiniteGKP.html  FiniteGKP.ipynb  README.md  jax_test.py  lowrank.ipynb  notes  torch_cuda_test.py
.ipynb_checkpoints/: FiniteGKP-checkpoint.ipynb
FiniteGKP/:  qoptctrl_intuition.ipynb  FiniteGKP.html  FiniteGKP.ipynb  Ropt.ipynb  analytic_opt.ipynb  controllers.py  custom_autodiff_control.ipynb  diffrax_intuition.ipynb  entropy.ipynb  fGKP_opt.ipynb  fourier_saved.npy  functional_autodiff.ipynb  jax_FiniteGKP.ipynb  jax_FiniteGKP.py  jaxpulse_submanifold_closure_testing.ipynb  jaxpulse_testing.ipynb  jc_vis.ipynb  kalman_intuition.ipynb  optimizers.py  qhjb_demo.ipynb  sbs_opt.ipynb  sdp_factorization.ipynb  squeeze_vis.ipynb  submanifold_closure.ipynb  submanifold_stabilization.ipynb  thingslearned.txt
FiniteGKP/ImagesIntuitionVis/:  qoptctrl_intuition.ipynb
FiniteGKP/SBSRoyer/: FiniteGKP.ipynb
FiniteGKP/gkp_utils/: utils.py
FiniteGKP/jaxpulse/: bilinear.py  controllers.py  optimizers.py  pyproject.toml  utils.py
c_testing/: test.c
cpp_testing/HPC/: HPC_notes  a.out  fast  fastloop.cpp  slow  slowloop.cpp
cpp_testing/helloworld/: a.out
cpp_testing/linalg/: README  a.out  test  test.cpp
dp/: classmech.ipynb  dp.ipynb
dp_control/: BoxJenkins.ipynb  Ogata.ipynb  OptCtrl_MITOCW.ipynb  OptCtrl_MITOCW_Hamiltonian.ipynb  classmech.ipynb  dp.ipynb  dynamics_tools.py  learningjax.ipynb
dp_control/.ipynb_checkpoints/: Ogata-checkpoint.ipynb
testing_jax/: testing_jaxvnumpy.py
yang/paper_figs/: PassivePlusActiveTraining.xlsx  fig4.py
(+26 files in other folders)
